version 1.11 ( )
1. Add apxs compile instruction in INSTALL.txt.
	Thank Hans Christian Saustrup, hc at saustrup.net for the suggestion.
2. Bug fix. (Win32 only) PHP script can not create socket on Win32.
	Thank bbscool at zjip.com for the bug report and the help.
3. Patchs from Robert L Mathews, rob at tigertech.com
	Fix compile warnings
	

version 1.10 ( Jul 3rd 2006 )
1. Use poll() instead of select() in UNIX. "It becomes problematic on apache2 with
large number of logfiles. Apache2 calls poll() (when OS supports it), and in that
case it doesn't need to be recompiled with larger FD_SETSIZE. select() is
still limited to FD_SETSIZE." 
	Thank Piotr Gackiewicz gacek at intertele.pl for the patch.
2. Bug fix: "Some requests fail with HTTP 500 and no errorlog entry is generated"
	Thank Piotr Gackiewicz gacek at intertele.pl for the patch.
3. Use anonymouse share memeory to make OS X happy.
	Thank andkjar at obtech.net for the patch.
4. Add config.m4, mod_fcgid now can be static linked in httpd(See INSTALL.txt)

version 1.09 ( Apr 25th 2006 )
1. Add configuration DefaultMinClassProcessCount(default 3). Idle fastcgi will not be killed if their count 
	less than DefaultMinClassProcessCount.  
	(Thank Finn Smith, finn at timeghost.net for suggestion)
2. Add  configuration PHP_Fix_Pathinfo_Enable(default 0). If you are using PHP and set cgi.fix_pathinfo=1 in
	php.ini, please add "PHP_Fix_Pathinfo_Enable 1" in httpd.conf.  
	(Thank Florian Munz,  flo at myhosting.de for bug report)?
3. Split error log whle '\r' or '\n' are inside the text send to "stderr". 
	(Thank frederic at jolliton.com for the patch)

version 1.08 ( Jan 22nd 2006 )
1. apr_bucket_copy() does not work with buckets from mod_ssl, use apr_bucket_heap_create() instead :(
	(Thank Grzegorz Sampolski, gs at blink.pl for the bug report)
2. Wrapper binary can be stored in a different location to the web content (like /usr/local/apache2/fcgi-bin)
	(Patch from Stephen Grier, s.e.grier at qmul.ac.uk)